@@ -43,6 +43,5 @@
 #cmakedefine01 ENABLE_WEB_SOCKETS
 #cmakedefine01 ENABLE_WORKERS
 #cmakedefine01 ENABLE_XSLT
-#cmakedefine01 ENABLE_DFG_JIT
 
 #endif /* CMAKECONFIG_H */
